<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_help_toc"
        android:icon="@drawable/ic_chapter_list"
        android:title="@string/chapter_list"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_fullscreen_edit"
        android:icon="@drawable/ic_code"
        android:title="@string/edit_content"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_close"
        android:title="@string/close"
        app:showAsAction="always"/>
</menu>
