<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="4dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/bg_book_info_intro_panel"
    android:clipToOutline="true"
    android:orientation="vertical"
    android:padding="8dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <io.legado.app.ui.widget.image.CoverImageView
            android:id="@+id/iv_cover"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:contentDescription="@string/img_cover"
            android:scaleType="centerCrop"
            android:src="@drawable/image_cover_default" />

        <io.legado.app.ui.widget.image.CircleImageView
            android:id="@+id/iv_in_bookshelf"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_gravity="top|end"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@color/md_green_600"
            android:visibility="invisible" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLines="2"
        android:text="@string/book_name"
        android:textColor="@color/primaryText"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/author"
        android:textColor="@color/secondaryText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_lasted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/last_read"
        android:textColor="@color/secondaryText"
        android:textSize="11.5sp" />

    <io.legado.app.ui.widget.LabelsBar
        android:id="@+id/ll_kind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:visibility="gone" />

    <io.legado.app.ui.widget.text.MultilineTextView
        android:id="@+id/tv_introduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/book_intro"
        android:textColor="@color/primaryText"
        android:textSize="12sp"
        tools:text="@string/book_intro" />

</LinearLayout>
